--- a/css/estilos.css
+++ b/css/estilos.css
@@ -10,10 +10,11 @@
 @import url(alquileres.css);
 @import url(venta.css);
 @import url(divisas.css);
-
+@import url(nosotros.css);
 
 body{
-    font-family: 'DynaPuff', cursive;     
+    font-family: 'DynaPuff', cursive;   
+      
 }
 
 ::selection{
@@ -26,6 +27,106 @@ body{
             margin: 0; 
             padding: 0;
             box-sizing: border-box;
+}
+
+.btn-wsp{
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    line-height: 55px;
+    right: 30px; 
+    background: rgb(21, 207, 67);
+    color: #fff;
+    border-radius: 50px;
+    text-align: center;
+    font-size: 35px;
+    box-shadow: 0px 1px 10px rgba(0,0,0,0.3);
+    z-index: 1;
+    transition: all 1s;
+}
+
+.btn-wsp:hover{
+    transition: all 1s;
+    transform: scale(1.2);
+    background-color: #fff;
+    color: rgb(21, 207, 67);
+    border: 2px solid;
+}
+
+.btn-flan{
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    line-height: 55px;
+    left: 30px; 
+    background: rgb(21, 207, 67);
+    color: #fff;
+    border-radius: 50px;
+    text-align: center;
+    font-size: 35px;
+    box-shadow: 0px 1px 10px rgba(0,0,0,0.3);
+    z-index: 1;
+    transition: all 1s;
+}
+
+.btn-flan img{
+    width: 50px;
+    height: 50px;
+    line-height: 55px;
+    border-radius: 50px;
+}
+
+.btn-flan img:hover{
+    transition: all 1s;
+    transform: scale(1.2);
+    background-color:#7405b4;
+   
+}
+
+.btn-esp{
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    line-height: 55px;
+    left: 30px; 
+    background: rgba(0, 0, 0, 0.248);
+    color: #fff;
+    border-radius: 50px;
+    text-align: center;
+    font-size: 35px;
+    box-shadow: 0px 1px 10px rgba(0,0,0,0.3);
+    z-index: 1;
+    transition: all 1s;
+}
+
+.btn-esp img{
+    width: 50px;
+    height: 50px;
+    line-height: 55px;
+    border-radius: 50px;
+    transition: all 1s;
+}
+
+.btn-esp img:hover{
+    transition: all 1s;
+    transform: scale(1.2);
+    background-color:#fff;
+   
+}
+
+@media screen and (max-width:1182px) {
+    .btn-wsp{
+        position: absolute;
+        margin-top: 50px;
+        
+    }
+
+}@media screen and (max-width:1182px) {
+    .btn-flan{
+        position: absolute;
+        margin-top: 50px;
+        
+    }
 }
 
 
@@ -47,6 +148,9 @@ section {
     margin-bottom: 25px;
 }
 
+
+
+
 footer{
     position: relative;
     width: 100%;
@@ -64,10 +168,11 @@ footer .menu_footer
 {
     position: relative;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     margin: 10px 0;
     flex-wrap: wrap;
+
 }
 
 footer .social_icon li,
