--- a/css/nosotros.css
+++ b/css/nosotros.css
@@ -25,7 +25,7 @@
     width: 100%;
     background: #fff;
     align-items: center;
-    height: 750px;
+    height: 1000px;
 
 }
 
@@ -39,7 +39,7 @@
 
 .lalo {
     width: 100%;
-    height: 250px;
+    height: 350px;
     background-color: #fff;
     transition: all 1000ms ease-out;
 }
@@ -58,8 +58,18 @@
 .lalo .info-lalo p{
     font-size: 12px;
     text-align: center;
-    margin: 30px;
+    margin: 40px;
 }
+
+.lalo .info-lalo a{
+    font-size: 18px;
+    color: rgb(87, 5, 238);
+}
+
+.lalo .info-lalo a:hover{
+    color: rgb(238, 118, 5);
+}
+
 
 .lalo .img-lalo{
     width: 50%;
@@ -72,7 +82,9 @@
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
-    margin: 35px 300px 35px 300px;
+    margin-left: 40%;
+    margin-top: 90px;
+    
 }
 
 .lalo:hover{
@@ -84,7 +96,7 @@
 
 .luisma {
     width: 100%;
-    height: 250px;
+    height: 350px;
     background-color: #fff;
     transition: all 1000ms ease-out;
 }
@@ -103,7 +115,16 @@
 .luisma .info-luisma p{
     font-size: 12px;
     text-align: center;
-    margin: 30px;
+    margin: 40px;
+}
+
+.luisma .info-luisma a{
+    font-size: 18px;
+    color: rgb(87, 5, 238);
+}
+
+.luisma .info-luisma a:hover{
+    color: rgb(238, 118, 5);
 }
 
 .lusima .img-luisma{
@@ -117,8 +138,8 @@
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
-    margin-top: 35px;
-    margin-left: 350px;
+    margin-top: 90px;
+    margin-left: 21%;
 }
 
 .luisma:hover{
@@ -129,7 +150,122 @@
 }
 
 
+@media screen and (max-width:1100px) {
+    #contenedor-nosotros{
+        height: 1100px;
+    }
+
+    .lalo{
+        height: 450px;
+        float:none;
+        display: flex;
+        flex-direction: row;
+
+    }
+    .lalo .info-lalo{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .luisma{
+        height: 400px;
+        float:none;
+        display: flex;
+        flex-direction: row;
+
+    }
+    .luisma .info-luisma{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+    }
+}
+
+@media screen and (max-width:1040px) {
+    #contenedor-nosotros{
+        height: 1500px;
+    }
+    .lalo{
+        height: 550px;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column-reverse;
+    }
+    .info-lalo{
+        width: 100%;
+        float: none;
+    
+    }
+    .lalo .img-lalo{
+        width: 100%;
+        float: none;
+        display: flex;
+        justify-content: center;
+       align-items: center;
+
+    }
+
+    .lalo .img-lalo img{
+        justify-content: center;
+        align-items: center;
+        margin-bottom: 50px;  
+        margin-right: 41%;
+        width: 140px;
+    }
+
+    .luisma{
+        height: 550px;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column-reverse;
+    }
+    .info-luisma{
+        width: 100%;
+        float: none;
+    
+    }
+    .luisma .img-luisma{
+        width: 100%;
+        float: none;
+        display: flex;
+        justify-content: center;
+       align-items: center;
+    }
+    .luisma .img-luisma img{
+        justify-content: center;
+        align-items: center;
+        margin-bottom: 50px;  
+        margin-right: 22%;
+        width: 140px;
+    }
+
+}
+
+@media screen and (max-width:600px){
+    .lalo{
+        height: 600px;
+    }
+    .luisma{
+        height: 600px;
+    }
+}
 
 
+@media screen and (max-width:500px){
+    #contenedor-nosotros{
+        height: 1700px;
+    }
+    .lalo{
+        height: 700px;
+    }
+    .luisma{
+        height: 700px;
+    }
+}
 
 
