--- a/css/menu.css
+++ b/css/menu.css
@@ -36,12 +36,14 @@
 }
 
 .header .logo h1{
-    font-size: 20px;
+    font-size: 18px;
     float: right;
     text-align: center;
     flex-wrap: wrap;
     margin-top: 30px;
 }
+
+
 
 .header .nav_links{
     list-style: none;
@@ -114,6 +116,10 @@
 }
 
 @media (max-width:950px){
+    .header .logo h1{
+        font-size: 15px;
+    }
+
     .menu-ham{
 
         display: block;
