--- a/css/estilos.css
+++ b/css/estilos.css
@@ -67,6 +67,7 @@ body{
     font-size: 35px;
     box-shadow: 0px 1px 10px rgba(0,0,0,0.3);
     z-index: 1;
+    transition: all 1s;
 }
 
 .btn-flan img{
